<resources>
    <string name="app_name">Detail</string>
    <string name="customTitle">%1$s\nlaunchMode : %2$s\ntaskAffinity : %3$s\ntaskId : %4$s\nthis：%5$s</string>
    <string name="toLaunchModeA">LaunchModeA standard</string>
    <string name="toLaunchModeAProcess">LaunchModeA standard new process</string>
    <string name="toLaunchModeB">LaunchModeB singleTop</string>
    <string name="toLaunchModeC">LaunchModeC singleTask</string>
    <string name="toLaunchModeD">LaunchModeD singleInstance</string>
    <string name="toTLaunchModeA">TLaunchModeA standard taskAffinity: t</string>
    <string name="toTLaunchModeB">TLaunchModeB singleTop taskAffinity: t</string>
    <string name="toTLaunchModeC">TLaunchModeC singleTask taskAffinity: t</string>
    <string name="toTLaunchModeD">TLaunchModeD singleInstance taskAffinity: t</string>
    <string name="toFlagA">FlagA flag taskAffinity: f</string>
</resources>